--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -51,6 +51,7 @@ background-color:#97DDBF;
 }
 #info p{
 	font-family: verdana;
+	font-size: 16px;
 	text-align: center;
 	width: 100%;
 	height: 100%;
