--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -6,8 +6,20 @@
 	background-color: #97DDBF;
 	width: 50%;
 	margin-top: 10%;
-	margin-bottom: 10%;
+	margin-bottom: 0%;
 	height: 60%;
+	display: inline-flex;
+}
+.redes{
+	height: 50%;
+	margin-right: 20%;
+	margin-left:20%;
+	border: 0px;
+	padding: 0%;
+	background-color: #97DDBF;
+	width: 60%;
+	margin-top: 0%;
+	margin-bottom: 0%;
 	display: inline-flex;
 }
 .imagen{
@@ -20,6 +32,7 @@ display: inline-block;
 background-color:#97DDBF ;
 }
 #info{
+border-style: solid;
 border: 0px;
 margin: 0px; 
 padding: 0px;
@@ -28,10 +41,6 @@ height: auto;
 display: inline-block;
 background-color:#97DDBF;
 }
-
-.logo{
-	background-color: red; 
-}
 .imagen img{
 	border: 0px;
 	padding: 10%;
@@ -39,25 +48,55 @@ background-color:#97DDBF;
 	height: 80%;
 	border-radius: 200px;
 }
-#info div{
-	border: 0px;
-	padding: 5%;
-	margin: 0px; 
-	width: 90%;
-	height: 10%;
-	margin: 0px;
-	display: inline-block;
 
-}
 #info p{
 	font-family: verdana;
-	font-size: 16px;
+	font-size: 20px;
 	text-align: center;
 	width: 100%;
 	height: 100%;
 	background-color: #4EEBEB;
 	display: inline-block;
 	border-radius: 70px;
+	border-style: solid;
+}
+.logo{
+	margin-right:20%;
+	margin-left:20%;
+	border: 0px;
+	padding: 5%;
+	width: 50%;
+	height: 5%;
+	display: inline-flex;
+	background-color: #4EEBEB;
+}
+#logo div {
+	margin:0px;
+	border: 0px;
+	width: 25%; 
+	height: 100%;
+	background-color: blue;
+}
+body #fondo{
+	width: auto;
+z-index: -1;
+position: absolute;
+width: 100%;
+height: 100%;
 
-
+}
+body{
+	margin: 0%;
+}
+.tarjeta{
+	z-index: 0;
+}
+.red{
+	width: 100%;
+	height: 100px;
+	border: 0px;
+	padding: 0px;
+	margin: 0px;
+	display: inline-block;
+	background-color: white;
 }
