--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -11,16 +11,12 @@
 	display: inline-flex;
 }
 .redes{
-	height: 50%;
+	height: 40%;
 	margin-right: 20%;
 	margin-left:20%;
-	border: 0px;
-	padding: 0%;
-	background-color: #97DDBF;
 	width: 60%;
-	margin-top: 0%;
-	margin-bottom: 0%;
 	display: inline-flex;
+	padding: 0%;
 }
 .imagen{
 border: 0px;
@@ -48,55 +44,57 @@ background-color:#97DDBF;
 	height: 80%;
 	border-radius: 200px;
 }
-
+#info div{
+	width: 100%;
+	height: auto;
+}
 #info p{
 	font-family: verdana;
 	font-size: 20px;
 	text-align: center;
 	width: 100%;
 	height: 100%;
-	background-color: #4EEBEB;
+	background-color: #EFFDF7;
 	display: inline-block;
 	border-radius: 70px;
-	border-style: solid;
-}
-.logo{
-	margin-right:20%;
-	margin-left:20%;
-	border: 0px;
-	padding: 5%;
-	width: 50%;
-	height: 5%;
-	display: inline-flex;
-	background-color: #4EEBEB;
-}
-#logo div {
-	margin:0px;
-	border: 0px;
-	width: 25%; 
-	height: 100%;
-	background-color: blue;
+	border:0px;
 }
 body #fondo{
 	width: auto;
-z-index: -1;
+	z-index: -1;
 position: absolute;
 width: 100%;
 height: 100%;
-
 }
 body{
 	margin: 0%;
 }
-.tarjeta{
+.Tarjeta{
 	z-index: 0;
+	width: 70%;
+	margin-left:15%;
+	margin-right: 15%;
+	margin-bottom:0%;
+	margin-top: 0%;
+	padding: 0px;
+	border:0px;
 }
 .red{
 	width: 100%;
 	height: 100px;
-	border: 0px;
+	border: 10px;
 	padding: 0px;
 	margin: 0px;
 	display: inline-block;
-	background-color: white;
+	background-color: #97DDBF;
+}
+.red img{
+	width: 40%;
+	height: 80px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 0px;
+	margin-right: 30%;
+	margin-left: 30%;
+	border: 0px;
 }
